# advent_2025

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.c  main.h
etc/: day_10.txt  day_11.txt  scratch_day_10.txt
include/: c17_strict.h  days.h  ds.h  io.h  main.h  parse.h  util.h
src/: c17.c  day01.c  day02.c  day03.c  day04.c  day05.c  day06.c  day07.c  day08.c  day09.c  day10.c  day11.c  day12.c  ds.c  io.c  main.c  parse.c  util.c
